# whiteout

./: .gitignore  AUDIT_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLI_UX_AUDIT.md  CONTRIBUTING.md  Cargo.toml  FINAL_IMPLEMENTATION_REPORT.md  IMPROVED_DESIGN.md  OPTIMIZATION_IMPLEMENTATION_GUIDE.md  PERFORMANCE_AUDIT.md  PERFORMANCE_AUDIT_V2.md  PERFORMANCE_IMPLEMENTATION_GUIDE.md  PERFORMANCE_REPORT_FINAL.md  PLAN.md  README.md  RUST_CODE_AUDIT.md  SECOND_AUDIT_REPORT.md  SECOND_ROUND_SUMMARY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_SECOND_PASS.md  install.sh  perf_audit.sh  quick_bench.sh  test_performance.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.whiteout/: .salt
.whiteout/.whiteout/: local.toml
aur/: .SRCINFO  PKGBUILD
benches/: optimization_comparison.rs  parser_benchmark.rs
examples/: demo.rs
homebrew/: whiteout.rb
scripts/: load_test.py  perf_test.sh
src/: error.rs  lib.rs  main.rs  validation.rs
src/cli/: mod.rs
src/cli/commands/: check.rs  clean.rs  config.rs  init.rs  mark.rs  mod.rs  preview.rs  smudge.rs  status.rs  sync.rs  unmark.rs
src/config/: mod.rs  project.rs
src/parser/: apply.rs  block.rs  inline.rs  inline_optimized.rs  memory_optimized.rs  mod.rs  mod_optimized.rs  optimized.rs  parallel.rs  partial.rs  simple.rs  types.rs
src/storage/: atomic.rs  batched.rs  crypto.rs  local.rs  local_optimized.rs  mod.rs
src/transform/: clean.rs  mod.rs  optimized_clean.rs  smudge.rs
tests/: block_decoration_test.rs  comment_styles_test.rs  edge_cases_test.rs  end_to_end_git_test.rs  end_to_end_test.sh  escape_sequence_test.rs  git_integration_test.sh  integration_test.rs  real_test.rs
