[package]
name = "whiteout"
version = "0.1.0"
edition = "2021"
authors = ["Terragon Labs"]
description = "Local-only code decoration tool for Git"
license = "MIT"
repository = "https://github.com/terragon-labs/whiteout"
keywords = ["git", "security", "development", "tools", "secrets"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
sha2 = "0.10"
aes-gcm = { version = "0.10", features = ["aes", "std"] }
base64 = "0.22"
colored = "2.1"
walkdir = "2.5"
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
insta = "1.38"

[[bin]]
name = "whiteout"
path = "src/main.rs"

[lib]
name = "whiteout"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true