[package]
name = "whiteout"
version = "0.1.0"
edition = "2021"
authors = ["Whiteout Contributors <contributors@whiteout.dev>"]
description = "Keep secrets out of Git while maintaining them locally"
documentation = "https://docs.whiteout.dev"
homepage = "https://whiteout.dev"
repository = "https://github.com/whiteout-dev/whiteout"
license = "MIT"
readme = "README.md"
keywords = ["git", "secrets", "security", "filter", "development"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    ".github/*",
    "tests/*",
    ".gitignore",
    ".whiteout/*",
    "*.sh",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
once_cell = "1.19"
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
sha2 = "0.10"
argon2 = "0.5"
rand = "0.8"
aes-gcm = { version = "0.10", features = ["aes", "std"] }
base64 = "0.22"
colored = "2.1"
walkdir = "2.5"
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
insta = "1.38"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "whiteout"
path = "src/main.rs"

[[bench]]
name = "parser_benchmark"
harness = false

[lib]
name = "whiteout"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true